[gd_scene load_steps=4 format=3 uid="uid://b4j0ad7bpymk4"]

[ext_resource type="Script" path="res://shooting_player.gd" id="1_qf6m1"]
[ext_resource type="PackedScene" uid="uid://bumq47rbyaeis" path="res://bullet.tscn" id="2_uamhi"]
[ext_resource type="PackedScene" uid="uid://q6d8su1x4qb0" path="res://player.tscn" id="2_y2ex0"]

[node name="ShootingPlayer" type="Node2D"]
script = ExtResource("1_qf6m1")
bullet_scene = ExtResource("2_uamhi")

[node name="Player" parent="." instance=ExtResource("2_y2ex0")]

[node name="BulletSpawnRight" type="Marker2D" parent="."]
position = Vector2(50, -50)

[node name="BulletSpawnLeft" type="Marker2D" parent="."]
position = Vector2(-50, -50)

[node name="BulletCooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="BulletCooldown" to="." method="_on_bullet_cooldown_timeout"]
